<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".FormularioProdutos" >

    <TextView
        android:id="@+id/textView4"
        android:layout_width="406dp"
        android:layout_height="66dp"
        android:text="@string/formulario"
        android:textAlignment="center"
        android:textColor="#EF6C00"
        android:textSize="34sp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="-1dp"
        tools:layout_editor_absoluteY="7dp" />

    <LinearLayout
        android:layout_width="412dp"
        android:layout_height="629dp"
        android:orientation="vertical"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="101dp">

        <EditText
            android:id="@+id/editText_NomeProduto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/insira_o_nome_do_produto"
            android:importantForAutofill="no"
            android:inputType="text"
            android:minHeight="48dp"
            android:textColorHint="#8D6E63" />

        <EditText
            android:id="@+id/editText_DescricaoProduto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/descri_o_do_produto"
            android:importantForAutofill="no"
            android:inputType="text"
            android:minHeight="48dp"
            android:textColorHint="#8D6E63" />

        <EditText
            android:id="@+id/editText_Quantidade"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/quantidade"
            android:importantForAutofill="no"
            android:inputType="text"
            android:minHeight="48dp"
            android:textColorHint="#8D6E63" />

        <Button
            android:id="@+id/btn_Polimorf"
            android:layout_width="match_parent"
            android:layout_height="67dp"
            android:text="@string/modificar"
            android:textAlignment="center"
            android:textSize="20sp"
            tools:ignore="VisualLintButtonSize" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>