<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="412dp"
        android:layout_height="730dp"
        android:orientation="vertical"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="-2dp"
        tools:layout_editor_absoluteY="0dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="67dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:text="@string/minha_cole_o"
            android:textAlignment="center"
            android:textColor="#FF5722"
            android:textSize="34sp" />

        <ListView
            android:id="@+id/ListView_Produtos"
            android:layout_width="match_parent"
            android:layout_height="519dp"
            android:layout_marginLeft="7dp"
            android:layout_marginRight="7dp" />

        <Button
            android:id="@+id/btn_Cadastrar"
            android:layout_width="match_parent"
            android:layout_height="67dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:text="@string/cadastrar"
            android:textAlignment="center"
            android:textSize="20sp"
            app:backgroundTint="#E2B03FC3"
            app:icon="@android:drawable/ic_menu_edit" />

        <Button
            android:id="@+id/btn_Buscar"
            android:layout_width="match_parent"
            android:layout_height="67dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:text="@string/buscar"
            android:textSize="20sp"
            app:backgroundTint="#3F9B43"
            app:icon="@android:drawable/ic_menu_search" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>